package ethanmmd.utils;

public abstract class WithGraphicsView {

    protected Console console;

}
