@startuml

title __UTILS's Class Diagram__\n

  namespace ethanmmd.utils {
    class ethanmmd.utils.AbstractTCPIP {
        - in : BufferedReader
        - out : PrintWriter
        - serverSocket : ServerSocket
        - socket : Socket
        + AbstractTCPIP()
        + AbstractTCPIP()
        + close()
        {static} + createClientSocket()
        {static} + createServerSocket()
        + receiveBoolean()
        + receiveChar()
        + receiveInt()
        + receiveLine()
        + send()
        + send()
        + send()
        + send()
    }
  }
  

  namespace ethanmmd.utils {
    class ethanmmd.utils.ClosedInterval {
        - max : int
        - min : int
        + ClosedInterval()
        + isIncluded()
        + toString()
    }
  }
  

  namespace ethanmmd.utils {
    interface ethanmmd.utils.Command {
        {abstract} + execute()
        {abstract} + getName()
        {abstract} + isActive()
    }
  }
  

  namespace ethanmmd.utils {
    class ethanmmd.utils.Console {
        {static} + console : Console
        - bufferedReader : BufferedReader
        {static} + instance()
        + readChar()
        + readInt()
        + readString()
        + readString()
        + write()
        + write()
        + writeln()
        + writeln()
        - Console()
        - writeError()
    }
  }
  

  namespace ethanmmd.utils {
    abstract class ethanmmd.utils.WithConsoleView {
        # WithConsoleView()
    }
  }
  

  namespace ethanmmd.utils {
    abstract class ethanmmd.utils.WithGraphicsView {
    }
  }
  

  namespace ethanmmd.utils {
    class ethanmmd.utils.YesNoDialog {
        {static} - AFIRMATIVE : char
        {static} - MESSAGE : String
        {static} - NEGATIVE : char
        {static} - QUESTION : String
        + read()
        + read()
        {static} - isAfirmative()
        {static} - isNegative()
    }
  }
  

  ethanmmd.utils.WithConsoleView o-- ethanmmd.utils.Console : console
  ethanmmd.utils.WithGraphicsView o-- ethanmmd.utils.Console : console
  ethanmmd.utils.YesNoDialog -up-|> ethanmmd.utils.WithConsoleView


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
